--- a/package.json
+++ b/package.json
@@ -14,9 +14,31 @@
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
   "dependencies": {
+    "babel-plugin-styled-components": "^1.12.0",
+    "babel-runtime": "^6.26.0",
     "gatsby": "^3.6.2",
+    "gatsby-background-image": "^1.5.3",
+    "gatsby-plugin-google-fonts": "^1.0.1",
+    "gatsby-plugin-image": "^1.7.1",
+    "gatsby-plugin-material-ui": "^3.0.1",
+    "gatsby-plugin-react-svg": "^3.0.1",
+    "gatsby-plugin-sass": "^4.8.0",
+    "gatsby-plugin-sharp": "^3.7.1",
+    "gatsby-plugin-styled-components": "^4.7.1",
+    "gatsby-source-filesystem": "^3.7.1",
+    "gatsby-transformer-sharp": "^3.7.1",
+    "intersection-observer": "^0.12.0",
+    "normalize.css": "^8.0.1",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "react-animate-height": "^2.0.23",
+    "react-dom": "^17.0.1",
+    "react-icons": "^4.2.0",
+    "react-responsive": "^8.2.0",
+    "react-router": "^5.2.0",
+    "react-router-dom": "^5.2.0",
+    "react-typing-animation": "^1.6.2",
+    "sass": "^1.35.1",
+    "styled-components": "^5.3.0"
   },
   "devDependencies": {
     "prettier": "2.2.1"
