--- a/package.json
+++ b/package.json
@@ -14,34 +14,46 @@
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
   "dependencies": {
+    "@hookform/resolvers": "^2.6.0",
+    "@material-ui/core": "latest",
+    "@material-ui/styles": "latest",
     "babel-plugin-styled-components": "^1.12.0",
     "babel-runtime": "^6.26.0",
+    "dotenv": "^10.0.0",
+    "firebase": "^8.7.0",
     "gatsby": "^3.6.2",
     "gatsby-background-image": "^1.5.3",
+    "gatsby-plugin-create-client-paths": "^3.9.0",
+    "gatsby-plugin-firebase": "^0.2.0-beta.4",
     "gatsby-plugin-google-fonts": "^1.0.1",
     "gatsby-plugin-image": "^1.7.1",
-    "gatsby-plugin-material-ui": "^3.0.1",
+    "gatsby-plugin-material-ui": "latest",
     "gatsby-plugin-react-svg": "^3.0.1",
-    "gatsby-plugin-sass": "^4.8.0",
+    "gatsby-plugin-sass": "^4.9.0",
     "gatsby-plugin-sharp": "^3.7.1",
     "gatsby-plugin-styled-components": "^4.7.1",
     "gatsby-source-filesystem": "^3.7.1",
     "gatsby-transformer-sharp": "^3.7.1",
     "intersection-observer": "^0.12.0",
+    "less": "^4.1.1",
     "normalize.css": "^8.0.1",
     "react": "^17.0.1",
     "react-animate-height": "^2.0.23",
     "react-dom": "^17.0.1",
+    "react-hook-form": "^7.10.1",
     "react-icons": "^4.2.0",
     "react-responsive": "^8.2.0",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-typing-animation": "^1.6.2",
-    "sass": "^1.35.1",
-    "styled-components": "^5.3.0"
+    "rxjs": "^7.2.0",
+    "sass": "^1.35.2",
+    "styled-components": "^5.3.0",
+    "yup": "^0.32.9"
   },
   "devDependencies": {
-    "prettier": "2.2.1"
+    "prettier": "2.2.1",
+    "sass-loader": "^7.1.0"
   },
   "repository": {
     "type": "git",
